# LC3AS

./: .gitignore  CMakeLists.txt  README.md  cxxopts.hpp  main.cpp
Assembler/: Assembler.cpp  Assembler.hpp  CMakeLists.txt  main.cpp
Assembler/includes/: Assembler.hpp  Token.hpp  Token_Directive.hpp  Token_Directive_Blkw.hpp  Token_Directive_End.hpp  Token_Directive_Fill.hpp  Token_Directive_Orig.hpp  Token_Directive_Stringz.hpp  Token_Immediate.hpp  Token_Immediate_Binary.hpp  Token_Immediate_Decimal.hpp  Token_Immediate_Hexadecimal.hpp  Token_Label.hpp  Token_Operator.hpp  Token_Operator_Add.hpp  Token_Operator_And.hpp  Token_Operator_Br.hpp  Token_Operator_Jmp.hpp  Token_Operator_Jsr.hpp  Token_Operator_Jsrr.hpp  Token_Operator_Ld.hpp  Token_Operator_Ldi.hpp  Token_Operator_Ldr.hpp  Token_Operator_Lea.hpp  Token_Operator_Not.hpp  Token_Operator_Ret.hpp  Token_Operator_St.hpp  Token_Operator_Sti.hpp  Token_Operator_Str.hpp  Token_Operator_Trap.hpp  Token_Register.hpp  Token_String.hpp  Token_Trap_Getc.hpp  Token_Trap_Halt.hpp  Token_Trap_In.hpp  Token_Trap_Out.hpp  Token_Trap_Puts.hpp  Token_Trap_Putsp.hpp
Assembler/includes/Tokens/: All_Tokens.hpp  Token_Directive.hpp  Token_Immediate.hpp  Token_Instruction.hpp  Token_Label.hpp  Token_Register.hpp  Token_String.hpp
Assembler/includes/Tokens/Directives/: Token_Directive.hpp  Token_Directive_Blkw.hpp  Token_Directive_End.hpp  Token_Directive_Fill.hpp  Token_Directive_Orig.hpp  Token_Directive_Stringz.hpp
Assembler/includes/Tokens/Immediate/: Token_Immediate_Binary.hpp  Token_Immediate_Decimal.hpp  Token_Immediate_Hexadecimal.hpp
Assembler/includes/Tokens/Instructions/: Token_Instruction_Add.hpp  Token_Instruction_And.hpp  Token_Instruction_Br.hpp  Token_Instruction_Jmp.hpp  Token_Instruction_Jsr.hpp  Token_Instruction_Jsrr.hpp  Token_Instruction_Ld.hpp  Token_Instruction_Ldi.hpp  Token_Instruction_Ldr.hpp  Token_Instruction_Lea.hpp  Token_Instruction_Not.hpp  Token_Instruction_Ret.hpp  Token_Instruction_St.hpp  Token_Instruction_Sti.hpp  Token_Instruction_Str.hpp  Token_Instruction_Trap.hpp
Assembler/includes/Tokens/Traps/: Token_Trap_Getc.hpp  Token_Trap_Halt.hpp  Token_Trap_In.hpp  Token_Trap_Out.hpp  Token_Trap_Puts.hpp  Token_Trap_Putsp.hpp
Assembler/source/: Assembler.cpp  Token.cpp  Token_Directive_Orig.cpp
Assembler/source/Tokens/: Token_Immediate.cpp  Token_Instruction.cpp  Token_Label.cpp  Token_Register.cpp  Token_String.cpp
Assembler/source/Tokens/Directives/: Token_Directive_Blkw.cpp  Token_Directive_End.cpp  Token_Directive_Fill.cpp  Token_Directive_Orig.cpp  Token_Directive_Stringz.cpp
Assembler/source/Tokens/Immediate/: Token_Immediate_Binary.cpp  Token_Immediate_Decimal.cpp  Token_Immediate_Hexadecimal.cpp
Assembler/source/Tokens/Instructions/: Token_Instruction_Add.cpp  Token_Instruction_And.cpp  Token_Instruction_Br.cpp  Token_Instruction_Jmp.cpp  Token_Instruction_Jsr.cpp  Token_Instruction_Jsrr.cpp  Token_Instruction_Ld.cpp  Token_Instruction_Ldi.cpp  Token_Instruction_Ldr.cpp  Token_Instruction_Lea.cpp  Token_Instruction_Not.cpp  Token_Instruction_Ret.cpp  Token_Instruction_St.cpp  Token_Instruction_Sti.cpp  Token_Instruction_Str.cpp  Token_Instruction_Trap.cpp
Assembler/source/Tokens/Traps/: Token_Trap_Getc.cpp  Token_Trap_Halt.cpp  Token_Trap_In.cpp  Token_Trap_Out.cpp  Token_Trap_Puts.cpp  Token_Trap_Putsp.cpp
Editor/: CMakeLists.txt  main.cpp
Editor/Includes/: CMakeLists.txt  ColourScheme.hpp  Console.hpp  Editor.hpp  MainWindow.hpp  SyntaxHighlighter.hpp
Editor/Source/: CMakeLists.txt  ColourScheme.cpp  Console.cpp  Editor.cpp  MainWindow.cpp  SyntaxHighlighter.cpp
Examples/: Compare.asm  Compare.hex  Compare.lst  Compare.sym  Features.asm  Features.hex  Features.lst  Features.sym  Fibonacci.asm  Fibonacci.hex  Fibonacci.lst  Fibonacci.sym  Multi_Word_Addition.asm  Multi_Word_Addition.hex  Multi_Word_Addition.lst  Multi_Word_Addition.sym  PRNG.asm  README.md  Recursive_Fibonacci.asm  Recursive_Fibonacci.hex  Recursive_Fibonacci.lst  Recursive_Fibonacci.sym  Test.asm  guessing_game.asm  include.h  include2.h  input.asm
Lib/: CMakeLists.txt
Lib/Config/: Configuration.cpp
Lib/Console/: Console.cpp
Lib/Diagnostics/: Console.cpp  Context.cpp  Diagnostics.cpp
Lib/Includes/: Configuration.hpp  Console.hpp  Context.hpp  Diagnostics.hpp  Extra.hpp  LexHelper.hpp  Lexer.hpp  Line.hpp  Parser.hpp  String_Matcher.hpp
Lib/Includes/Tokens/: Symbol.hpp  Token.hpp  Token_Addon_Char.hpp  Token_Addon_Include.hpp  Token_Addon_Lshift.hpp  Token_Addon_Neg.hpp  Token_Addon_Set.hpp  Token_Addon_Sub.hpp  Token_Directive.hpp  Token_Directive_Blkw.hpp  Token_Directive_End.hpp  Token_Directive_Fill.hpp  Token_Directive_Orig.hpp  Token_Directive_Stringz.hpp  Token_Immediate.hpp  Token_Immediate_Binary.hpp  Token_Immediate_Decimal.hpp  Token_Immediate_Hexadecimal.hpp  Token_Immediate_Octal.hpp  Token_Instruction.hpp  Token_Instruction_Add.hpp  Token_Instruction_And.hpp  Token_Instruction_Br.hpp  Token_Instruction_Jmp.hpp  Token_Instruction_Jsr.hpp  Token_Instruction_Jsrr.hpp  Token_Instruction_Ld.hpp  Token_Instruction_Ldi.hpp  Token_Instruction_Ldr.hpp  Token_Instruction_Lea.hpp  Token_Instruction_Not.hpp  Token_Instruction_Ret.hpp  Token_Instruction_St.hpp  Token_Instruction_Sti.hpp  Token_Instruction_Str.hpp  Token_Instruction_Trap.hpp  Token_Label.hpp  Token_Register.hpp  Token_String.hpp  Token_Trap_Getc.hpp  (+6 more)
Lib/Lexer/: Lexer.cpp  String_Matcher.cpp
Lib/Lexer/Tokens/: Token.cpp  Token_Addon_Char.cpp  Token_Addon_Include.cpp  Token_Addon_Lshift.cpp  Token_Addon_Neg.cpp  Token_Addon_Set.cpp  Token_Addon_Sub.cpp  Token_Directive.cpp  Token_Directive_Blkw.cpp  Token_Directive_End.cpp  Token_Directive_Fill.cpp  Token_Directive_Orig.cpp  Token_Directive_Stringz.cpp  Token_Immediate.cpp  Token_Immediate_Binary.cpp  Token_Immediate_Decimal.cpp  Token_Immediate_Hexadecimal.cpp  Token_Immediate_Octal.cpp  Token_Instruction.cpp  (+25 more)
Lib/Parser/: Parser.cpp
Simulator/: CMakeLists.txt
Simulator/includes/: Simulator.hpp
Simulator/source/: Simulator.cpp
Test/: CMakeLists.txt  Test_Lexer.cpp
(+78 files in other folders)
